update Admin and Customer